# 3D

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_skills_and_project_external.py  003_conversations.py  004_document_project_nullable.py  005_app_settings.py  006_company_profile_rich_analysis.py  007_visual_style_design_spec.py  008_sop_pipeline_stages.py  009_case_reference_images.py  010_fix_prompt_templates.py  011_project_screen_and_preferences.py  012_company_name_unique.py
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  base.py  company_analysis.py  proposal.py  visual.py  visual_concept.py
apps/api/app/core/: config.py  exceptions.py  prompts.py  security.py  ttl_cache.py
apps/api/app/db/: base.py  init_db.py  session.py
apps/api/app/exporters/: pdf_exporter.py  pptx_exporter.py  word_exporter.py
apps/api/app/models/: __init__.py  app_setting.py  case.py  company_profile.py  conversation.py  document.py  feedback.py  generation.py  project.py  retrieval.py  rule.py  skill.py  template.py  user.py  visual.py  workflow.py
apps/api/app/parsers/: document_parser.py
apps/api/app/rag/: chunker.py  context_pack.py  indexer.py  retriever.py
apps/api/app/routers/: agents.py  auth.py  cases.py  companies.py  company_profiles.py  conversations.py  (+13 more)
apps/api/scripts/: check_duplicate_companies.py
(+184 files in other folders)
