[project]
name = "3dwall-api"
version = "0.1.0"
description = "3D Wall Proposal Generation Platform API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "reportlab>=4.2.0",
    "openai>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.setuptools.packages.find]
include = ["app*"]
